[tool.poetry]
name = "upload-photos-fastapi"
version = "0.1.0"
description = ""
authors = ["Chibuikem"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
uvicorn = "^0.29.0"
python-multipart = "^0.0.9"
sqlmodel = "^0.0.16"
fastapi = "^0.110.1"
pydantic = {extras = ["email"], version = "^2.6.4"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
